--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#CE2D2D</color>
+    <color name="colorButtonNormal">#B9B6B6</color>
+    <color name="colorRespostaErrada">#CE2D2D</color>
+    <color name="colorRespostaCerta">#3F51B5</color>
 </resources>
